Resources/clean_c_files_rte/c_files_acsl_by_rte/output_altergo_tests/output_alphabet_letter_1_altergo.txt
[kernel] Parsing alphabet_letter_1_rte.c (with preprocessing)
[kernel] alphabet_letter_1_rte.c:1: 
  syntax error:
  Location: line 1, column 1, before or at token: [
  1     [kernel] Warning: no input file.
        ^
  2     [kernel] Parsing alphabet_letter_1.c (with preprocessing)
  3     [rte:annot] annotating function alphabet_letter
[kernel] Frama-C aborted: invalid user input.
